--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ torch >= 2.0.0
 accelerate == 0.21.0
 bitsandbytes == 0.40.2
 peft == 0.5.0
-transformers == 4.32.1
+git+https://github.com/huggingface/transformers.git@5936c8c
+flash-attn == 2.2.4.post1
 otptimum == 1.13.1
 zstandard
 jsonlines
