--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,12 @@ accelerate == 0.23.0
 bitsandbytes == 0.41.0
 peft == 0.5.0
 transformers == 4.34.0
-flash-attn == 2.3.0
+flash-attn == 2.3.3
+fasttext-wheel
 zstandard
 jsonlines
 wandb
 openai
 sentencepiece
 fire
+pillow
